ks8_specifications/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  type: LoadBalancer
  selector:
    app: my-full-stack-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-full-stack-app
  template:
    metadata:
      labels:
        app: my-full-stack-app
    spec:
      containers:
      - name: api-gateway
        image: acreyes0704/full-stack-coding-challenge_api-gateway:latest
        ports:
        - containerPort: 80
