ks8_specifications/employee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  selector:
    app: my-full-stack-app
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-full-stack-app
  template:
    metadata:
      labels:
        app: my-full-stack-app
    spec:
      containers:
      - name: employee-service
        image: acreyes0704/full-stack-coding-challenge_employee-service:latest
        ports:
        - containerPort: 8082
