ks8_specifications/my-sql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  selector:
    app: my-full-stack-app
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-full-stack-app
  template:
    metadata:
      labels:
        app: my-full-stack-app
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-pv-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-pv-volume
        persistentVolumeClaim:
          claimName: mysql-pv-claim
