ks8_specifications/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  selector:
    app: my-full-stack-app
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-full-stack-app
  template:
    metadata:
      labels:
        app: my-full-stack-app
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: postgres-persistent-storage
            mountPath: /var/lib/postgres
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
