ks8_specifications/react-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ui
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  type: LoadBalancer
  selector:
    app: my-full-stack-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
  namespace: full-stack-app
  labels:
    app: my-full-stack-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-full-stack-app
  template:
    metadata:
      labels:
        app: my-full-stack-app
    spec:
      containers:
      - name: react-ui
        image: acreyes0704/full-stack-coding-challenge_react-ui:latest
        ports:
        - containerPort: 80
